--- a/venda.css
+++ b/venda.css
@@ -111,8 +111,11 @@ body {
     padding-top: 140px;
     border-radius: 10px;
     text-align: center;
+    
   }
-
+  .produto-compra a {
+    text-decoration: none;
+  }
   .preco {
     font-size: 1.8rem;
     font-weight: bold;
@@ -133,8 +136,11 @@ body {
     cursor: pointer;
     border-radius: 8px;
     transition: background 0.3s;
+    text-decoration: none;
+  
   }
 
   .btn:hover {
     background: #cc6600;
   }
+  
